--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1"
   },
