--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^7.14.1",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
