--- a/dashboard/src/manifest.json
+++ b/dashboard/src/manifest.json
@@ -7,6 +7,9 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
+  "permissions": [
+    "tabs"
+  ],
   "browser_action": {
     "default_title": "Silicon Dashboard",
     "default_popup": "popup/popup.html"
