typing effects finally working

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,10 +19,10 @@
     "axios": "^0.19.0",
     "firebase": "^7.14.1",
     "tailwindcss": "^1.2.0",
+    "typer-js": "^5.3.0",
     "vue": "^2.6.10",
     "vue-global-events": "^1.1.2",
     "vue-router": "^3.0.1",
-    "vue-typed-js": "^0.1.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
