--- a/dashboard/src/manifest.json
+++ b/dashboard/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Silicon Dashboard",
-  "description": "Futuristic Chrome dashboard, productivity tool, and virtual assistant",
+  "description": "Futuristic Chrome dashboard",
   "version": 0.1,
   "manifest_version": 2,
   "icons": {
@@ -8,7 +8,11 @@
     "128": "icons/icon_128.png"
   },
   "permissions": [
-    "tabs"
+    "tabs",
+    "webRequest",
+    "webRequestBlocking",
+    "*://silicon-dashboard.netlify.app/*",
+    "https://us-central1-silicon-dashboard.cloudfunctions.net/*"
   ],
   "browser_action": {
     "default_title": "Silicon Dashboard",
@@ -18,10 +22,6 @@
     "scripts": [
       "background.js"
     ]
-  },
-  "options_ui": {
-    "page": "options/options.html",
-    "chrome_style": true
   },
   "chrome_url_overrides": {
     "newtab": "tab/tab.html"
