--- a/dashboard/src/manifest.json
+++ b/dashboard/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Silicon Dashboard",
   "description": "Futuristic Chrome dashboard",
-  "version": 0.1,
+  "version": "0.1.1",
   "manifest_version": 2,
   "icons": {
     "48": "icons/icon_48.png",
